tests/NormalTests/paczka2/big_fuzzy/42601092.err
Error in line 5: e7RS S138 28,78
Error in line 3: hidyy A717 16,5
Error in line 12: hidyy A756 46,5
Error in line 15: e7RS S138 4,8
Error in line 22: ed7jwTtc A756 144,3
Error in line 38: ed7jwTtc S18 76,2
Error in line 42: S18 A756 32,0
Error in line 48: S18 S18 94,5
Error in line 23: e7RS S138 73,3
Error in line 71: e7RS A717 16,3
Error in line 79: nxVz A717 11,4
Error in line 85: nxVz S138 52,8
Error in line 86: nxVz A756 61,7
Error in line 98: nxVz S138 66,9
Error in line 108: S18 S138 157,32
Error in line 107: S18 S138 87,8
Error in line 128: nxVz S138 36,1
Error in line 133: XN6Afj0CSJD A717 -1,2
Error in line 131: e7RS S138 27,8
Error in line 137: nxVz S18 88,7
Error in line 140: ed7jwTtc S138 21,0
Error in line 146: nxVz A717 29,2
Error in line 152: hidyy S18 11,4
Error in line 132: XN6Afj0CSJD A717 39,1
Error in line 161: e7RS S18 -3,2
Error in line 155: XN6Afj0CSJD A756 36,1
Error in line 153: hidyy S138 76,6
Error in line 139: e7RS S18 55,0
Error in line 165: hidyy A717 50,0
Error in line 174: nxVz A756 -2,4
Error in line 172: nxVz A756 81,7
Error in line 183: nxVz S18 2:,9
Error in line 187: S18 S18 75,5
Error in line 171: hidyy S18 9,6
Error in line 181: nxVz S18 44,3
Error in line 194: nxVz S138 49,2
Error in line 226: e7RS A756 64,6
Error in line 223: ed7jwTtc S138 60,9
Error in line 222: hidyy S138 61,9
Error in line 232: nxVz S138 48,51
Error in line 215: S18 A717 58,9
Error in line 243: S18 A756 59,9
